hphp/hack/test/typecheck/inout/bad_inout_use_byref.php.exp
File "bad_inout_use_byref.php", line 7, characters 12-12:
An expression is expected here. (Parsing[1002])
File "bad_inout_use_byref.php", line 7, characters 11-11:
Unbound name: `&` (a global constant) (Naming[2049])
File "bad_inout_use_byref.php", line 7, characters 11-11:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
